--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tunnel": "vk-tunnel --http-protocol=http --host=localhost --port=5173",
+    "predeploy": "npm run build",
     "deploy": "vite build && vk-miniapps-deploy"
   },
+  "homepage": ".",
   "dependencies": {
     "@vkontakte/icons": "^2.92.0",
     "@vkontakte/vk-bridge": "^2.13.0",
@@ -28,13 +30,17 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vkontakte/vk-miniapps-deploy": "^0.1.7",
     "@vkontakte/vk-tunnel": "^0.2.0",
+    "copy-webpack-plugin": "^12.0.2",
     "eruda": "^3.0.1",
     "esbuild": "~0.20.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "terser": "^5.4.0",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
